# dnjplayer

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: package.json  vite.config.ts
apps/desktop/scripts/: build-macos.sh  setup-libmpv.sh
apps/desktop/src/: app.css  app.d.ts  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/lib/: libmpv-wrapper.dylib
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: library.rs  mega.rs  mod.rs  pipeline.rs  player.rs
apps/desktop/src-tauri/src/db/migrations/: 001_init.sql  002_jobs.sql  003_watched.sql  004_favorites.sql
apps/desktop/src-tauri/src/mega/: client.rs  mod.rs  process.rs  webdav.rs
apps/desktop/src-tauri/src/pipeline/: docker.rs  mod.rs  queue.rs  watcher.rs
apps/desktop/src-tauri/src/shaders/: presets.rs
apps/desktop/src/lib/: log.ts
apps/desktop/src/lib/components/: AuthForm.svelte  FileBrowser.svelte  Player.svelte  PlayerControls.svelte
apps/desktop/src/lib/i18n/: en.ts  es.ts  index.ts
apps/desktop/src/lib/services/: db-service.ts  mega-service.ts  pipeline-service.ts  player-service.ts
apps/desktop/src/lib/stores/: jobs.ts  library.ts  mega.ts  (+4 more)
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/desktop/static/shaders/: PLACE_GLSL_FILES_HERE
docker/: Dockerfile.processor  docker-compose.yml
docker/config/: processing-profiles.json
docker/scripts/: process.sh
(+9 files in other folders)
